--- a/geragsv/package.json
+++ b/geragsv/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser-dynamic": "~10.1.3",
     "@angular/router": "~10.1.3",
     "bootstrap": "^4.5.3",
+    "jquery": "^1.9.1",
     "ngx-bootstrap": "^6.1.0",
     "ngx-file-drop": "^10.0.0",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
